--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Estilos para los clusters */
+.custom-cluster-marker {
+  background: none;
+  border: none;
+}
+
+.custom-cluster-marker div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  color: white;
+  background: #14b8a6;
+  border-radius: 50%;
+  font-weight: bold;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilos para los marcadores individuales */
+.custom-marker {
+  background: none;
+  border: none;
+}
+
+.custom-marker svg {
+  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.5));
+}
